--- a/Web/Web.html
+++ b/Web/Web.html
@@ -1,10 +1,18 @@
-<html>
+<html lang="en-US">
+	<head>
+		<title>Flight Server</title>
+	</head>
 	<body>
- 		<h1>Flight Server</h1>"
+ 		<h1>Flight Server</h1>
+		<img src="pilots.jpg" alt="This is Avner" width="350" height="192">
+		<p>Please enter username and password</p>
                             <form action="/action_page.php">
-                         		First name: <input type="text" name="fname"><br>
-                         		Last name: <input type="text" name="lname"><br>
+                         		Username : <input type="text" name="uName"><br>
+                         		Password: <input type="text" name="pWord"><br>
                           		<input type="submit" value="Submit">
                             </form>
+		<hr>
+		<h2>Links</h2>
+		<a href="https://www.expedia.com/">Link to Expedia</a>
 	</body>
 </html>
